# iolaus

./: README.md  environment.yml  mkdocs.yml  polspice.ipynb  polspice_camb.ipynb  polspice_camb_Eq90.ipynb  polspice_heracles.ipynb  polspice_public.ipynb  pyproject.toml
examples/: PolSpice.ipynb  big_comp.ipynb  comp.ipynb  deconvolve_flagship.ipynb  directinv.ipynb  directinv_sym.ipynb  euclid.ipynb  example.ipynb  new_comp.ipynb
iolaus/: __init__.py  __main__.py  forwards.py  inversion.py  master.py  polspice.py  polspice_utils.py  theory.py  utils.py
scripts/: forwardandmaster.py  inversion.py  polspice.py
scripts/utils/: gen_sims.py  make_masks.py
