[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-vcs",
    "hatchling",
]

[project]
authors = [
    { name = "Jaime Ruiz Zapatero", email = "jaime.ruiz-zapatero@ucl.ac.uk"}
]

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "heracles",
    "astropy",
    "yml",
    "camb",
    "healpy",
    "numpy",
    "scipy",
]
description = "Harmonic-space statistics on the sphere"
dynamic = [
    "version",
]
license = "LGPL-3.0-or-later"
name = "iolaus"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
all = [
    "ducc0",
    "rich",
]
docs = [
    "furo",
    "ipython",
    "matplotlib",
    "nbsphinx",
    "numpydoc",
    "sphinx",
    "sphinxcontrib-katex",
]
test = [
    "ducc0",
    "pytest",
    "pytest-cov",
    "pytest-rerunfailures",
]

[project.scripts]
iolaus = "iolaus.cli:main"

[project.urls]
Documentation = "https://iolaus.readthedocs.io/"
Homepage = "https://github.com/jaimerzp/iolaus"
Issues = "https://github.com/jaimerzp/iolaus/issues"

[tool.hatch]
build.hooks.vcs.version-file = "iolaus/_version.py"
version.source = "vcs"

[tool.pytest.ini_options]
addopts = "--color=yes -v"
testpaths = [
    "tests",
]

[tool.ruff]
include = ["iolaus/**/*.py", "pyproject.toml", "tests/**/*.py"]
target-version = "py39"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false